# digitaltap-oss

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
digitaltap/: __init__.py  cli.py  config.py
digitaltap/agents/: __init__.py  base.py  cluster_manager.py  cost_anomaly.py  idle_detection.py  right_sizing.py  scheduler.py
digitaltap/collectors/: aws.py  base.py  databricks.py  mock.py
digitaltap/llm/: base.py  ollama.py
digitaltap/models/: cluster.py  metrics.py
examples/: demo.py
tests/: test_agents.py
